--- a/vita.html
+++ b/vita.html
@@ -46,14 +46,14 @@
             <h2>placetobe</h2>
             <h3>galerie hausgeburt | Stuttgart</h3>
           </article>
-          <ul class="artists hidden">
+          <ul class="artists hidden-content hidden">
             <li>Eva Dittrich</li>
             <li>Fabian w. Penzkofer</li>
             <li>Jasmin Schädler</li>
             <li>Ivan Syrov</li>
             <li>Helen Weber</li>
           </ul>
-          <div class="gallery hidden"><img src="https://picsum.photos/250/200/?random"/><img src="https://picsum.photos/140/280/?random"/><img src="https://picsum.photos/240/280/?random"/></div>
+          <div class="gallery hidden-content hidden"><img src="https://picsum.photos/200/200/?random"/><img src="https://picsum.photos/300/200/?random"/><img src="https://picsum.photos/500/300/?random"/></div>
         </div>
         <div class="content vita-content">
           <h4>15.09 - 07.10.2018</h4>
@@ -61,14 +61,14 @@
             <h2>schatten im licht</h2>
             <h3>Cafe De Ville, Schorndorf</h3>
           </article>
-          <ul class="artists vita-artists">
+          <ul class="artists hidden-content hidden">
             <li>Eva Dittrich</li>
             <li>Fabian w. Penzkofer</li>
             <li>Jasmin Schädler</li>
             <li>Ivan Syrov</li>
             <li>Helen Weber</li>
           </ul>
-          <div class="gallery"><img src="https://picsum.photos/200/200/?random"/><img src="https://picsum.photos/300/200/?random"/><img src="https://picsum.photos/500/300/?random"/></div>
+          <div class="gallery hidden-content hidden"><img src="https://picsum.photos/200/200/?random"/><img src="https://picsum.photos/300/200/?random"/><img src="https://picsum.photos/500/300/?random"/></div>
         </div>
       </section>
     </div>
