all kinds of stuff

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
         <nav>
           <ul class="nav-mobile">
             <li><a href="index.html">Jetzt</a></li>
-            <li> <a href="index.html">Werke
-                <ul class="werke hidden">
-                  <li><a href="index.html">Feed II</a></li>
-                  <li><a href="index.html">Feed I</a></li>
-                  <li><a href="index.html">Schwarz</a></li>
-                  <li><a href="index.html">Mathe</a></li>
-                  <li> <a href="index.html">Orte und Tretmühlen</a></li>
-                </ul></a></li>
+            <li> <a href="werke.html">Werke</a></li>
+            <ul class="werke">
+              <li><a href="werke.html">Feed II</a></li>
+              <li><a href="feed-1.html">Feed I</a></li>
+              <li><a href="schwarz.html">Schwarz</a></li>
+              <li><a href="mathe.html">Mathe</a></li>
+              <li> <a href="orte-tret.html">Orte und Tretmühlen</a></li>
+            </ul>
             <li><a href="vita.html">Vita</a></li>
-            <li><a href="index.html">Impressum</a></li>
+            <li class="kontakt"><a href="impressum.html">Kontakt/<br>Impressum</a></li>
           </ul>
         </nav>
       </div>
