--- a/werke.html
+++ b/werke.html
@@ -18,9 +18,9 @@
         <nav>
           <ul class="nav-mobile">
             <li><a href="index.html">Jetzt</a></li>
-            <li> <a href="werke.html">Werke</a></li>
+            <li> <a href="werke.html"><strong>Werke</strong></a></li>
             <ul class="werke">
-              <li><a href="werke.html">Feed II</a></li>
+              <li><a href="werke.html"><strong>Feed II</strong></a></li>
               <li><a href="feed-1.html">Feed I</a></li>
               <li><a href="schwarz.html">Schwarz</a></li>
               <li><a href="mathe.html">Mathe</a></li>
