--- a/werke.html
+++ b/werke.html
@@ -18,13 +18,14 @@
         <nav>
           <ul class="nav-mobile">
             <li><a href="index.html">Jetzt</a></li>
-            <li> <a href="werke.html"><strong>Werke</strong></a></li>
+            <li> <a href="feed-1.html"><strong>Werke</strong></a></li>
             <ul class="werke">
-              <li><a href="werke.html"><strong>Feed II</strong></a></li>
-              <li><a href="feed-1.html">Feed I</a></li>
+              <li><a href="feed-1.html"> </a><strong>Feed I</strong></li>
+              <li><a href="werke.html">Feed II</a></li>
               <li><a href="schwarz.html">Schwarz</a></li>
               <li><a href="mathe.html">Mathe</a></li>
               <li> <a href="orte-tret.html">Orte und Tretmühlen</a></li>
+              <li> <a href="orte-tret.html">Schatten im Licht</a></li>
             </ul>
             <li><a href="vita.html">Vita</a></li>
             <li class="kontakt"><a href="impressum.html">Kontakt/<br>Impressum</a></li>
@@ -33,7 +34,23 @@
       </div>
       <section id="werke">
         <div class="werke-content">
-          <article class="art"><img src="https://picsum.photos/600/500/?random"/>
+          <article class="art"><img src="pics/feed2/F1.jpg"/>
+            <ul class="art-desc">
+              <li>f1</li>
+              <li>Digitaldruck auf Backprintfolie</li>
+              <li>21x21cm</li>
+              <li>2018</li>
+            </ul>
+          </article>
+          <article class="art"><img src="pics/feed2/F2.jpg"/>
+            <ul class="art-desc">
+              <li>f2</li>
+              <li>Digitaldruck auf Backprintfolie</li>
+              <li>21x21cm</li>
+              <li>2018</li>
+            </ul>
+          </article>
+          <article class="art"><img src="pics/feed2/F3.jpg"/>
             <ul class="art-desc">
               <li>f3</li>
               <li>Digitaldruck auf Backprintfolie</li>
@@ -41,9 +58,9 @@
               <li>2018</li>
             </ul>
           </article>
-          <article class="art"><img src="https://picsum.photos/800/300/?random"/>
+          <article class="art"><img src="pics/feed2/F5.jpg"/>
             <ul class="art-desc">
-              <li>f2</li>
+              <li>f5</li>
               <li>Digitaldruck auf Backprintfolie</li>
               <li>21x21cm</li>
               <li>2018</li>
