--- a/feed-2.html
+++ b/feed-2.html
@@ -18,19 +18,56 @@
         <nav>
           <ul class="nav-mobile">
             <li><a href="index.html">Jetzt</a></li>
-            <li> <a href="werke.html"><strong>Werke</strong></a></li>
+            <li> <a href="feed-1.html"><strong>Werke</strong></a></li>
             <ul class="werke">
-              <li><a href="feed-2.html">Feed II</a></li>
               <li><a href="feed-1.html">Feed I</a></li>
+              <li><a href="feed-2.html"> </a><strong>Feed II</strong></li>
               <li><a href="schwarz.html">Schwarz</a></li>
-              <li><a href="mathe.html">Mathe</a></li>
+              <li><a href="mathe.html">ℑ⊆[IMG_0010;IMG_9990]</a></li>
               <li> <a href="orte-tret.html">Orte und Tretmühlen</a></li>
+              <li> <a href="schatten.html">Schatten im Licht</a></li>
             </ul>
             <li><a href="vita.html">Vita</a></li>
-            <li><a href="impressum.html">Impressum</a></li>
+            <li class="kontakt"><a href="impressum.html">Kontakt <br>Datenschutz<br>Impressum</a></li>
           </ul>
         </nav>
       </div>
+      <section id="werke">
+        <div class="werke-content">
+          <article class="art"><img src="pics/feed2/F1.jpg"/>
+            <ul class="art-desc">
+              <li>f1</li>
+              <li>Digitaldruck auf Backprintfolie</li>
+              <li>21x21cm</li>
+              <li>2018</li>
+            </ul>
+          </article>
+          <article class="art"><img src="pics/feed2/F2.jpg"/>
+            <ul class="art-desc">
+              <li>f2</li>
+              <li>Digitaldruck auf Backprintfolie</li>
+              <li>21x21cm</li>
+              <li>2018</li>
+            </ul>
+          </article>
+          <article class="art"><img src="pics/feed2/F3.jpg"/>
+            <ul class="art-desc">
+              <li>f3</li>
+              <li>Digitaldruck auf Backprintfolie</li>
+              <li>21x21cm</li>
+              <li>2018</li>
+            </ul>
+          </article>
+          <article class="art"><img src="pics/feed2/F5.jpg"/>
+            <ul class="art-desc">
+              <li>f5</li>
+              <li>Digitaldruck auf Backprintfolie</li>
+              <li>21x21cm</li>
+              <li>2018</li>
+            </ul>
+          </article>
+        </div>
+      </section>
     </div>
   </body>
 </html>
